spell check up to end of 2.1

--- a/notebooks/data-modeling-images-1.ipynb
+++ b/notebooks/data-modeling-images-1.ipynb
@@ -7134,11 +7134,11 @@
         "id": "fRf3aDcMExFX"
       },
       "source": [
-        "Maintenant que nous avons identifié le modéles le plus prometteur de la section, nous allons pouvoir tester l'impact de quelques hyper-paramètres sur ses performances.\n",
+        "Maintenant que nous avons identifié le modèle le plus prometteur de la section, nous allons pouvoir tester l'impact de quelques hyper-paramètres sur ses performances.\n",
         "\n",
-        "Commençons par le learning rate. Pour tenter d'accélerer l'apprentissage, nous allons tenter d'augmenter le learning rate de départ. Ensuite nous allons adopter une stratégie de reduction graduelle du learning rate plus communement appelée _Learning rate decay_\n",
+        "Commençons par le learning rate. Pour tenter d'accélérer l'apprentissage, nous allons augmenter le learning rate de départ. Ensuite, nous allons adopter une stratégie de réduction graduelle du learning rate plus communément appelée _Learning rate decay_.\n",
         "\n",
-        "Tous les autres paramètres ainsi que le jeu de données seront mantenant constants afin de tenter d'isoler l'impact"
+        "Tous les autres paramètres ainsi que le jeu de données seront maintenus constants afin de tenter d'isoler l'impact.\n"
       ]
     },
     {
@@ -7147,7 +7147,7 @@
         "id": "I9lfBSB4GX_K"
       },
       "source": [
-        "Changeons la variables **model_id** pour qu'elle corresponde au modèle en cours"
+        "Changeons la variable **model_id** pour qu'elle corresponde au modèle en cours.\n"
       ]
     },
     {
@@ -7203,7 +7203,7 @@
         "id": "ciu6fqxUGX_i"
       },
       "source": [
-        "## Initialisation du rapport de modéle"
+        "## Initialisation du rapport de modèle"
       ]
     },
     {
@@ -7791,7 +7791,7 @@
         "id": "civ1GIGTGX_k"
       },
       "source": [
-        "Commençons par créer une liste ordonnée des classes que l'on va fournir aux générateurs. Plus tard cette liste nous servira à retrouver les classes correspondant aux prédictions car la methode **predict** de keras retourne une matrice dont les colonnes correspondent aux classes dans l'ordre auquel on les a fourni."
+        "Commençons par créer une liste ordonnée des classes que l'on va fournir aux générateurs. Plus tard, cette liste nous servira à retrouver les classes correspondant aux prédictions car la méthode **predict** de keras retourne une matrice dont les colonnes correspondent aux classes dans l'ordre auquel on les a fournies.\n"
       ]
     },
     {
@@ -7811,9 +7811,9 @@
         "id": "eUxlZcxQGX_l"
       },
       "source": [
-        "On va reprendre ici les même générateurs d'image que pour la modélisation 1.1. On se contente de rappeler leur méthode **flow_from_dataframe** pour obtenir une instance adaptée au nouveau jeu de données.\n",
+        "On va reprendre ici les mêmes générateurs d'image que pour la modélisation 1.1. On se contente de rappeler leur méthode **flow_from_dataframe** pour obtenir une instance adaptée au nouveau jeu de données.\n",
         "\n",
-        "On pense quand même à sauvegarder dans le rapport les paramètres de **ImageDataGenerator** pour le modèle en cours."
+        "On pense quand même à sauvegarder dans le rapport les paramètres de **ImageDataGenerator** pour le modèle en cours.\n"
       ]
     },
     {
@@ -7942,7 +7942,7 @@
         "id": "j-U3EEYZGX_m"
       },
       "source": [
-        "## Création du model"
+        "## Création du modèle"
       ]
     },
     {
@@ -8023,7 +8023,7 @@
         "id": "9BXfZ7hbGX_n"
       },
       "source": [
-        "## Entrainement du model"
+        "## Entraînement du modèle"
       ]
     },
     {
@@ -8032,9 +8032,9 @@
         "id": "SyJJH1YBIJVm"
       },
       "source": [
-        "Crééons une callback qui va nous permettre d'impléementer notre stratégie de _Learning rate decay_. Si on revient sur les graphs de **loss** de la modélisation 1.3, on observe que le ralentissment la diminution de **loss** intervient dés l'époque 3. On choisi donc un **decay_step** relativement bas pour s'assurer un ajustement qui commence rapidement.\n",
+        "Créons une callback qui va nous permettre d'implémenter notre stratégie de _Learning rate decay_. Si on revient sur les graphs de **loss** de la modélisation 1.3, on observe que le ralentissement la diminution de **loss** intervient dès l'époque 3. On choisit donc un **decay_step** relativement bas pour s'assurer un ajustement qui commence rapidement.\n",
         "\n",
-        "On laisse le **start_lr** inchangé car un test __off screen__ d'un **start_lr** multplié par 10 revèle que ça ne marche pas bien"
+        "On laisse le **start_lr** inchangé car un test __off screen__ d'un **start_lr** multiplié par 10 révèle que ça ne marche pas bien.\n"
       ]
     },
     {
@@ -8067,8 +8067,7 @@
         "id": "uWBthyZzGX_n"
       },
       "source": [
-        "On procéde à l'entraînement du modèle de la même façon que lors de la modélisation 1.1. Là encore, on réutilise les paramètres initiaux si ce n'est qu'on passe notre callback **lr_scheduler** au modèle.\n",
-        "\n"
+        "On procède à l'entraînement du modèle de la même façon que lors de la modélisation 1.1. Là encore, on réutilise les paramètres initiaux si ce n'est qu'on passe notre callback **lr_scheduler** au modèle.\n"
       ]
     },
     {
@@ -8245,7 +8244,7 @@
         "id": "ICqO4Diw_8L0"
       },
       "source": [
-        "Comparés à la modélisation 1.3, on constate une augmentation de 0.02 du **f1_score** et de 0.03 de l'accuracy. Ca montre que notre utilisation du __decay learning rate__ améliore l'apprentissage"
+        "Comparés à la modélisation 1.3, on constate une augmentation de 0.02 du **f1_score** et de 0.03 de l'accuracy. Cela montre que notre utilisation du __decay learning rate__ améliore l'apprentissage."
       ]
     },
     {
@@ -8256,8 +8255,8 @@
       "source": [
         "On récupère l'historique d'entraînement complet grâce à **get_full_training_history** qu'on va enregistrer puis on affiche deux graphiques:\n",
         "\n",
-        "* L'évolution de l'accuracy et du score f1 pendant en fonction des époques\n",
-        "* L'évolution des indicateurs de perte **loss** et **val_loss**"
+        "- L'évolution de l'accuracy et du score f1 pendant en fonction des époques\n",
+        "- L'évolution des indicateurs de perte **loss** et **val_loss**\n"
       ]
     },
     {
@@ -8298,13 +8297,13 @@
         "id": "6kLAiZZKGX_r"
       },
       "source": [
-        "On note que la ralentissment de l'apprentissage observé en à l'éopque 3 de la modélisation 1.3 à diminué puisqu'il passe de 0.1 pour 3 époques à 0.1 pour 2 époques.\n",
+        "On note que le ralentissement de l'apprentissage observé à l'époque 3 de la modélisation 1.3 a diminué, passant de 0.1 pour 3 époques à 0.1 pour 2 époques.\n",
         "\n",
-        "Le ralentissement s'accélère toujours à l'époque 7 mais moins: 0.1 pour 3 époques contre 0.1 pour 6 époques précedemment.\n",
+        "Le ralentissement s'accélère toujours à l'époque 7, mais moins : 0.1 pour 3 époques contre 0.1 pour 6 époques précédemment.\n",
         "\n",
-        "On observe une tendance possible à l'overfitting vers la fin puisque **val_loss** passe au dessus de **loss** qui continue de diminuer. Cela se reflète également sur l'**accuracy** et le **f1_score** de validation qui converge tous deux vers leurs courbes d'entraînement sans toute fois les croiser.\n",
+        "On observe une tendance possible à l'overfitting vers la fin, puisque **val_loss** passe au-dessus de **loss** qui continue de diminuer. Cela se reflète également sur l'**accuracy** et le **f1_score** de validation qui convergent tous deux vers leurs courbes d'entraînement sans toutefois les croiser.\n",
         "\n",
-        "Il est possible qu'on commencer à toucher certaines limites du modèle à cause d'un dataset limité à 25% des données qui ne ne parvient pas à généraliser au delà d'un certain point."
+        "Il est possible qu'on commence à toucher certaines limites du modèle à cause d'un dataset limité à 25% des données qui ne parvient pas à généraliser au-delà d'un certain point.\n"
       ]
     },
     {
@@ -8379,7 +8378,7 @@
         "id": "qXM61Ym3GX_r"
       },
       "source": [
-        "Là aussi on constate des améliorations depuis la modélisation 1.3 puisque seule la classe **1180** n'a aucune prédiction"
+        "Là aussi, on constate des améliorations depuis la modélisation 1.3, puisque seule la classe **1180** n'a aucune prédiction."
       ]
     },
     {
@@ -8426,7 +8425,7 @@
         "id": "aP2n7rwNGX_s"
       },
       "source": [
-        "On constate des confusions moins fréquentes que lors de la modélisation 1.3"
+        "On constate des confusions moins fréquentes que lors de la modélisation 1.3.\n"
       ]
     },
     {
